--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "yarn build && yarn --cwd ./hosting/ cdk deploy -c stage=production"
+    "deploy": "yarn build && yarn --cwd ./hosting/ cdk deploy"
   },
   "eslintConfig": {
     "extends": "react-app"
