--- a/web/hosting/package.json
+++ b/web/hosting/package.json
@@ -8,26 +8,29 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "deploy:hosting": "cdk deploy",
+    "deploy:mergePipeline": "cdk deploy --app 'npx ts-node bin/create-mergePipeline.ts'"
   },
   "devDependencies": {
-    "@aws-cdk/assert": "1.27.0",
+    "@aws-cdk/assert": "1.31.0",
     "@types/jest": "^24.0.22",
     "@types/node": "10.17.5",
-    "aws-cdk": "1.27.0",
+    "aws-cdk": "1.31.0",
     "jest": "^24.9.0",
     "ts-jest": "^24.1.0",
     "ts-node": "^8.1.0",
     "typescript": "~3.7.2"
   },
   "dependencies": {
-    "@aws-cdk/aws-codebuild": "^1.27.0",
-    "@aws-cdk/aws-codepipeline": "^1.27.0",
-    "@aws-cdk/aws-codepipeline-actions": "^1.27.0",
-    "@aws-cdk/aws-s3": "^1.27.0",
-    "@aws-cdk/aws-s3-deployment": "^1.27.0",
-    "@aws-cdk/aws-ssm": "^1.28.0",
-    "@aws-cdk/core": "1.27.0",
+    "@aws-cdk/aws-codebuild": "^1.31.0",
+    "@aws-cdk/aws-codepipeline": "^1.31.0",
+    "@aws-cdk/aws-codepipeline-actions": "^1.31.0",
+    "@aws-cdk/aws-iam": "^1.31.0",
+    "@aws-cdk/aws-s3": "^1.31.0",
+    "@aws-cdk/aws-s3-deployment": "^1.31.0",
+    "@aws-cdk/aws-ssm": "^1.31.0",
+    "@aws-cdk/core": "1.31.0",
     "source-map-support": "^0.5.16"
   }
 }
