--- a/web/hosting/package.json
+++ b/web/hosting/package.json
@@ -23,6 +23,7 @@
     "typescript": "~3.7.2"
   },
   "dependencies": {
+    "@aws-cdk/app-delivery": "1.31.0",
     "@aws-cdk/aws-codebuild": "^1.31.0",
     "@aws-cdk/aws-codepipeline": "^1.31.0",
     "@aws-cdk/aws-codepipeline-actions": "^1.31.0",
