Add new pipeline and web stacks. Successful deploy of site to cloudfront.

--- a/web/hosting/package.json
+++ b/web/hosting/package.json
@@ -10,7 +10,8 @@
     "test": "jest",
     "cdk": "cdk",
     "deploy:hosting": "cdk deploy",
-    "deploy:mergePipeline": "cdk deploy --app 'npx ts-node bin/create-mergePipeline.ts'"
+    "deploy:mergePipeline": "cdk deploy --app 'npx ts-node bin/create-mergePipeline.ts'",
+    "deploy:pipeline": "cdk deploy --app 'npx ts-node bin/create-pipeline.ts' '*'"
   },
   "devDependencies": {
     "@aws-cdk/assert": "1.31.0",
