--- a/web/package.json
+++ b/web/package.json
@@ -19,8 +19,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "yarn --cwd hosting deploy:hosting",
-    "synth": "cdk synth -- -o dist --app mg-web-pipeline"
+    "deploy": "yarn --cwd hosting deploy:hosting"
   },
   "eslintConfig": {
     "extends": "react-app"
