--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -56,16 +56,17 @@ jobs:
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
 
       - name: Install dependencies
-        run: npm --prefix ../container/cdk install
+        run: npm --prefix container/cdk install
 
       - name: Deploy
-        run: 'npm --prefix ../container/cdk run deploy pr${PR}'
+        run: 'npm --prefix container/cdk run deploy pr${PR}'
 
   hometown_job:
     name: Job for hometown
@@ -73,13 +74,14 @@ jobs:
     if: needs.check_changed_folders.outputs.run_hometown == 'true'
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v1
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
 
       - name: Install dependencies
-        run: npm --prefix ../hometown/cdk install
+        run: npm --prefix hometown/cdk install
 
       - name: Deploy
-        run: 'npm --prefix ../hometown/cdk run deploy pr${PR}'
+        run: 'npm --prefix hometown/cdk run deploy pr${PR}'
