--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -42,7 +42,7 @@ jobs:
     needs: check_changed_folders
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: jwalton/gh-find-current-pr@v1
         id: findPr
       - run: echo "Your PR is ${PR}"
@@ -55,8 +55,12 @@ jobs:
     needs: find_pr
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
@@ -73,8 +77,12 @@ jobs:
     needs: find_pr
     if: needs.check_changed_folders.outputs.run_hometown == 'true'
     runs-on: ubuntu-latest
+    env:
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
