--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -56,7 +56,7 @@ jobs:
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
@@ -70,7 +70,7 @@ jobs:
         run: npm --prefix container/cdk install
 
       - name: Deploy
-        run: 'npm --prefix container/cdk run deploy pr${PR}'
+        run: 'npm --prefix container/cdk run deploy pr$PR'
 
   hometown_job:
     name: Job for hometown
@@ -78,7 +78,7 @@ jobs:
     if: needs.check_changed_folders.outputs.run_hometown == 'true'
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_DEFAULT_REGION: ${{ secrets.AWS_REGION }}
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
@@ -92,4 +92,4 @@ jobs:
         run: npm --prefix hometown/cdk install
 
       - name: Deploy
-        run: 'npm --prefix hometown/cdk run deploy pr${PR}'
+        run: 'npm --prefix hometown/cdk run deploy pr$PR'
