--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -56,7 +56,7 @@ jobs:
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
     env:
-      AWS_DEFAULT_REGION: us-west-2
+      AWS_DEFAULT_REGION: 'us-west-2'
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
@@ -94,7 +94,7 @@ jobs:
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          aws-region: us-west-2
+          aws-region: 'us-west-2'
 
       - name: Deploy
         run: 'npm --prefix hometown/cdk run deploy pr${{env.PR}}'
