--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -50,13 +50,21 @@ jobs:
         env:
           PR: ${{ steps.findPr.outputs.pr }}
 
+  view_env:
+    name: View environment variables
+    needs: find_pr
+    runs-on: ubuntu-latest
+    steps:
+      - run: echo "Your PR is ${PR} - ${{env.PR}} - ${{steps.findPr.outputs.number}}"
+
   container_job:
     name: Job for container
     needs: find_pr
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
     env:
-      AWS_DEFAULT_REGION: 'us-west-2'
+      AWS_REGION: 'us-west-2'
+      AWS_ACCOUNT: 586890172263
       AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
       AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
@@ -95,6 +103,7 @@ jobs:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: 'us-west-2'
+          aws-account: 586890172263
 
       - name: Deploy
         run: 'npm --prefix hometown/cdk run deploy pr${{env.PR}}'
