--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -45,19 +45,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: jwalton/gh-find-current-pr@v1
         id: findPr
-      - run: |
+      - run: echo PR is ${PR}
           export PR=${PR}
           echo "::set-env name=PR::$PR"
         if: success() && steps.findPr.outputs.number
         env:
           PR: ${{ steps.findPr.outputs.pr }}
+    outputs:
+      pr: ${{ steps.findPr.outputs.pr }}
 
   view_env:
     name: View environment variables
     needs: find_pr
     runs-on: ubuntu-latest
     steps:
-      - run: echo "Your PR is ${PR} - ${{env.PR}} - ${{steps.findPr.outputs.number}}"
+      - run: echo "Your PR is ${PR} - ${{env.PR}} - ${{steps.findPr.outputs.number}} - ${{needs.find_pr.outputs.pr}}"
         env:
           PR: ${{ steps.findPr.outputs.pr }}
 
