--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -57,12 +57,13 @@ jobs:
     needs: find_pr
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
-    env:
-      AWS_REGION: 'us-west-2'
-      AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-      AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+    # env:
+    #   AWS_REGION: 'us-west-2'
+    #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+    #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     steps:
       - uses: actions/checkout@v2
+
       - name: Use Node.js
         uses: actions/setup-node@v1
         with:
@@ -70,6 +71,12 @@ jobs:
 
       - name: Install dependencies
         run: npm --prefix container/cdk install
+
+      - name: Configure AWS credentials
+        run: |
+          aws configure --profile default set aws_access_key_id ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws configure --profile default set aws_secret_access_key ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws configure --profile default set region ${{ secrets.CDK_DEFAULT_REGION }}
 
       - name: Deploy
         run: 'npm --prefix container/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
