--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -74,7 +74,7 @@ jobs:
 
       - name: Configure AWS credentials
         run: |
-          aws configure --profile default set aws_access_key_id $AWS_ACCESS_KEY_ID
+          aws configure --profile default set aws_access_key_id $AWS_ACCESS_KEY_ID ${AWS_ACCESS_KEY_ID}
           aws configure --profile default set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
           aws configure --profile default set region $AWS_REGION
 
