--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -75,9 +75,9 @@ jobs:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
         run: |
-          aws configure --profile default set aws_access_key_id ${{env.AWS_ACCESS_KEY_ID}}
-          aws configure --profile default set aws_secret_access_key $AWS_SECRET_ACCESS_KEY
-          aws configure --profile default set region $AWS_REGION
+          aws configure --profile default set aws_access_key_id "$AWS_ACCESS_KEY_ID"
+          aws configure --profile default set aws_secret_access_key "$AWS_SECRET_ACCESS_KEY"
+          aws configure --profile default set region "$AWS_REGION"
 
       - name: Deploy
         run: 'npm --prefix container/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
