--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -111,7 +111,7 @@ jobs:
           AWS_DEFAULT_REGION: 'us-west-2'
           AWS_DEFAULT_ACCOUNT: 586890172263
           CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
-          CDK_DEFAULT_ACCOUNT: ${{ secrets.CDK_DEFAULT_ACCOUNT }}
+          CDK_DEFAULT_ACCOUNT: 586890172263
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
