--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -99,19 +99,19 @@ jobs:
           npm --prefix hometown/web install
           npm --prefix hometown/web run build
 
-      - name: cdk diff
-        uses: youyo/aws-cdk-github-actions@v2
-        with:
-          cdk_subcommand: 'diff'
-          actions_comment: true
-          working_dir: 'hometown/cdk'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-west-2'
-          AWS_DEFAULT_ACCOUNT: 586890172263
-          CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
-          CDK_DEFAULT_ACCOUNT: 586890172263
+      # - name: cdk diff
+      #   uses: youyo/aws-cdk-github-actions@v2
+      #   with:
+      #     cdk_subcommand: 'diff'
+      #     actions_comment: true
+      #     working_dir: 'hometown/cdk'
+      #   env:
+      #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+      #     AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+      #     AWS_DEFAULT_REGION: 'us-west-2'
+      #     AWS_DEFAULT_ACCOUNT: 586890172263
+      #     CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
+      #     CDK_DEFAULT_ACCOUNT: 586890172263
 
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -121,6 +121,13 @@ jobs:
           role-to-assume: 'arn:aws:iam::586890172263:role/testing-role-Role-1W2U5EHSZS9D1'
           role-session-name: CDKDeploySession
           aws-region: 'us-west-2'
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_DEFAULT_REGION: 'us-west-2'
+          AWS_DEFAULT_ACCOUNT: 586890172263
+          CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
+          CDK_DEFAULT_ACCOUNT: 586890172263
 
       - name: Deploy
         run: 'npm --prefix hometown/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
