--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -98,11 +98,10 @@ jobs:
       - name: Install CDK dependencies
         run: npm --prefix hometown/cdk install
 
-      - name: Build web frontend
-        run: |
-          npm --prefix hometown/web install
-          npm --prefix hometown/web run build
-
+      # - name: Build web frontend
+      #   run: |
+      #     npm --prefix hometown/web install
+      #     npm --prefix hometown/web run build
       # - name: cdk diff
       #   uses: youyo/aws-cdk-github-actions@v2
       #   with:
@@ -116,22 +115,21 @@ jobs:
       #     AWS_DEFAULT_ACCOUNT: 586890172263
       #     CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
       #     CDK_DEFAULT_ACCOUNT: 586890172263
-
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
         with:
           # aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
           # aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          role-to-assume: 'arn:aws:iam::586890172263:role/testing-role-Role-1W2U5EHSZS9D1'
-          role-session-name: CDKDeploySession
-          aws-region: 'us-west-2'
-        env:
-          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_DEFAULT_REGION: 'us-west-2'
-          AWS_DEFAULT_ACCOUNT: 586890172263
-          CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
-          CDK_DEFAULT_ACCOUNT: 586890172263
+          role-to-assume: arn:aws:iam::586890172263:role/testing-role-Role-1W2U5EHSZS9D1
+          # role-session-name: CDKDeploySession
+          aws-region: us-west-2
+        # env:
+        #   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        #   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        #   AWS_DEFAULT_REGION: 'us-west-2'
+        #   AWS_DEFAULT_ACCOUNT: 586890172263
+        #   CDK_DEFAULT_REGION: ${{ secrets.CDK_DEFAULT_REGION }}
+        #   CDK_DEFAULT_ACCOUNT: 586890172263
 
       - name: Deploy
         run: 'npm --prefix hometown/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
