--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -57,6 +57,9 @@ jobs:
     needs: check_changed_folders
     if: needs.check_changed_folders.outputs.run_container == 'true' || needs.check_changed_folders.outputs.run_hometown == 'true'
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
+      contents: read
     steps:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v1
@@ -69,6 +72,9 @@ jobs:
     needs: find_pr
     if: needs.check_changed_folders.outputs.run_container == 'true'
     runs-on: ubuntu-latest
+    # permissions:
+    #   id-token: write
+    #   contents: read
 
     steps:
       - name: Checkout
@@ -92,9 +98,9 @@ jobs:
     if: needs.check_changed_folders.outputs.run_hometown == 'true'
     runs-on: ubuntu-latest
 
-    permissions:
-      id-token: write
-      contents: read
+    # permissions:
+    #   id-token: write
+    #   contents: read
 
     steps:
       - name: Checkout
