--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -87,6 +87,12 @@ jobs:
       - name: Deploy
         run: 'npm --prefix container/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
 
+        - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: cat outputs.json
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
   hometown_job:
     name: Deploy Hometown MFE
     needs: find_pr
@@ -111,3 +117,9 @@ jobs:
 
       - name: Deploy
         run: 'npm --prefix hometown/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
+
+      - name: Comment PR
+        uses: thollander/actions-comment-pull-request@v1
+        with:
+          message: cat outputs.json
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
