--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -88,10 +88,13 @@ jobs:
         run: 'npm --prefix container/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
 
       - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v1
+        uses: actions/github-script@0.3.0
+        if: github.event_name == 'pull_request'
         with:
-          message: cat outputs.json
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
+            github.issues.createComment({ issue_number, owner, repo, body: '${{ cat outputs.json }}' });
 
   hometown_job:
     name: Deploy Hometown MFE
@@ -119,7 +122,10 @@ jobs:
         run: 'npm --prefix hometown/cdk run deploy pr${{needs.find_pr.outputs.pr}}'
 
       - name: Comment PR
-        uses: thollander/actions-comment-pull-request@v1
+        uses: actions/github-script@0.3.0
+        if: github.event_name == 'pull_request'
         with:
-          message: cat outputs.json
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          script: |
+            const { issue: { number: issue_number }, repo: { owner, repo }  } = context;
+            github.issues.createComment({ issue_number, owner, repo, body: 'Hello world ! 👋' });
