--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -91,7 +91,7 @@ jobs:
         id: outputs
         uses: juliangruber/read-file-action@v1
         with:
-          path: ./outputs.json
+          path: container/cdk/outputs.json
 
       - name: Comment PR
         uses: actions/github-script@0.3.0
